# chengyali

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: 需求.doc
doc/tasks/deploy-test-server-v1/: ci-cd-evidence.md  execution-log.md  task.md  verification-report.md
doc/tasks/git-shareable-build-baseline-v1/: execution-log.md  task.md  verification-report.md
doc/tasks/loan-interest-accrual-desktop-v1/: execution-log.md  task.md  verification-report.md
doc/tasks/loan-interest-accrual-exe-v1/: execution-log.md  task.md  verification-report.md
doc/tasks/loan-interest-accrual-historical-import-v1/: execution-log.md  task.md  verification-report.md
doc/tasks/loan-interest-accrual-v1/: execution-log.md  task-state.json  task.md  verification-report.md
doc/tasks/update-to-latest-v1/: execution-log.md  task.md  (+1 more)
docs/environments/: ci-cd-evidence.md
scripts/: build-exe.ps1  deploy-test-server.ps1  desktop-launch.ps1  desktop-stop.ps1  install.ps1  setup.ps1  smoke.ps1  start.ps1  uninstall.ps1  verify-release.ps1
src/loan_interest_accrual/: __init__.py  desktop_exe.py  settings.py
tests/: conftest.py
tests/bootstrap/: test_package.py  test_project_metadata.py  test_repository_hygiene.py  test_runtime.py
tests/deploy/: test_test_server_deploy_contract.py
tests/e2e/: conftest.py  test_desktop_product.py  test_user_journey.py
tests/historical/: test_historical_validation.py
tests/release/: test_desktop_product_release.py  test_release_contract.py
tests/unit/: test_amortization_workflow.py
tools/historical_validation/: validator.py
(+66 files in other folders)
