[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-interest-accrual"
version = "0.1.0"
description = "Local-only loan interest accrual application"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.115.5",
    "httpx==0.28.1",
    "Jinja2==3.1.6",
    "openpyxl==3.1.5",
    "python-multipart==0.0.22",
    "uvicorn==0.32.0",
]

[project.optional-dependencies]
test = [
    "playwright==1.58.0",
    "pytest==8.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
loan_interest_accrual = [
    "web/static/*",
    "web/templates/*",
]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = [
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]
pythonpath = ["src"]
